# VSLAM_Book_Code_Exercises_Ubuntu_20.04_LTS

./: .gitignore  packagesInstallation.md  readme.md  readme.txt
ch10/: CMakeLists.txt  pose_graph_g2o_SE3.cpp  pose_graph_g2o_lie_algebra.cpp
ch10/exercises/: CMakeLists.txt  caution.md  pose_graph_ceres_quaternion_sphere.cpp
ch11/: CMakeLists.txt  feature_training.cpp  gen_vocab_large.cpp  loop_closure.cpp
ch12/dense_RGBD/: CMakeLists.txt  octomap_mapping.cpp  pointcloud_mapping.cpp  surfel_mapping.cpp
ch12/dense_mono/: CMakeLists.txt  dense_mapping.cpp
ch12/exercises/: CMakeLists.txt  dense_InvDepth.cpp  dense_InvDepth_Affine.cpp  semi_InvDepth_Affine.cpp  semi_depth.cpp
ch13/config/: default.yaml
ch13/include/myslam/: visual_odometry.h
ch13/src/: viewer.cpp  visual_odometry.cpp
ch3/examples/: CMakeLists.txt  coordinateTransform.cpp  plotTrajectory.cpp
ch3/exercises/LinearFuncSolver/: CMakeLists.txt  EigenLinearSolving.cpp  LinearSolver.cpp
ch3/exercises/MatrixReplace/: CMakeLists.txt  MatrixReplace.cpp
ch3/useEigen/: CMakeLists.txt  eigenMatrix.cpp
ch3/useGeometry/: CMakeLists.txt  useGeometry.cpp
ch3/visualizeGeometry/: CMakeLists.txt
ch4/: CMakeLists.txt  useSophus.cpp
ch4/example/: CMakeLists.txt  trajectoryError.cpp
ch5/imageBasics/: CMakeLists.txt  imageBasics.cpp  undistortImage.cpp
ch5/rgbd/: CMakeLists.txt  jointMap.cpp
ch5/stereoVision/: CMakeLists.txt  stereoVision.cpp
ch6/: CMakeLists.txt  ceresCurveFitting.cpp  g2oCurveFitting.cpp  gaussNewton.cpp  gaussNewtonVec.cpp
ch7/: CMakeLists.txt  orb_cv.cpp  orb_self.cpp  pose_estimation_2d2d.cpp  pose_estimation_3d2d.cpp  pose_estimation_3d3d.cpp  triangulation.cpp
ch7/exercises/: CMakeLists.txt  _Yet_pnp_landmark_g2o_BA_3d2d.cpp  features_cv.cpp  icp_pose_TDB_GN_3d3d.cpp  icp_pose_landmark_3d3d_Ceres.cpp  icp_pose_landmark_3d3d_g2o.cpp  icp_pose_landmark_BA_3d3d_GN.cpp  icp_pose_only_3d3d_Ceres.cpp  pnp_landmark_only_3d2d_LM.cpp  pnp_landmark_only_3d2d_ver2_GN.cpp  pnp_pose_landmark_3d2d_Ceres.cpp  pnp_pose_landmark_BA_3d2d_GN.cpp  pnp_pose_landmark_BA_3d2d_LM.cpp  pnp_pose_landmark_g2o_BA_3d2d.cpp  pnp_pose_only_3d2d_Ceres.cpp  pnp_pose_only_3d2d_Ceres_v2.cpp  pnp_pose_only_3d2d_Ceres_v2_proj.cpp  rotation.h
ch7/exercises/bugs/: pnp_landmark_BA_3d2d_ver1_bug.cpp  pnp_landmark_BA_3d2d_ver2_debug_only_optimize_pts.cpp  pnp_landmark_GN_BA_3d2d_bug.cpp  pnp_landmark_GN_Drop3pts_BA_3d2d.cpp  pnp_landmark_g2o_BA_3d2d_buggy.cpp
ch8/: CMakeLists.txt  direct_method.cpp  optical_flow.cpp
ch8/exercises/: CMakeLists.txt  direct_method_semi_g2o.cpp  direct_method_sparse_keypoints_g2o.cpp  direct_method_sparse_random_g2o.cpp
ch9/: CMakeLists.txt  SnavelyReprojectionError.h  bundle_adjustment_ceres.cpp  bundle_adjustment_g2o.cpp  common.cpp  common.h  random.h
ch9/exercises/: BAL_BA_FullCamModel_ceres.cpp  BAL_BA_FullCamModel_g2o.cpp  BAL_BA_ceres.cpp  CMakeLists.txt  common.h
exercises/Ceres_Learning/: CMakeLists.txt  curveFittingAuto.cpp  linearFunc.cpp  linearFunc_analytic.cpp  linearFunc_numeric.cpp  powellAuto.cpp  robustCurveFitAuto.cpp
exercises/G2O_Learning/: CMakeLists.txt  README.md  curveFittingG2O.cpp
exercises/Levenberg_Marquardt/: CMakeLists.txt  LMcurveFit.cpp  LMcurveFitVec.cpp
exercises/Stereo_Dense_Mapping/: CMakeLists.txt  README.md  single_pair_mapping.cpp
